--- a/index-tabela.html
+++ b/index-tabela.html
@@ -20,7 +20,7 @@
   th, td { border: 1px solid #ccc; padding: 8px; text-align: left; }
   th { background-color: #f2f2f2; }
   .estado-conclusao { background-color: #d4f4d7; }
-  .estado-curso { background-color: #f8d4d4; }
+  .estado-curso { background-color: #f20303; }
   .estado-despacho { background-color: #ffe5b4; }
   .estado-resolucao { background-color: #d4e4f8; }
   .dark-mode .estado-conclusao { background-color: #2e4f2e; color: #e0e0e0; }
