--- a/index2-tabela.html
+++ b/index2-tabela.html
@@ -8,9 +8,20 @@
       font-family: Arial, sans-serif;
       margin: 20px;
       background: #f4f4f4;
+      color: #000;
+      transition: background-color 0.3s, color 0.3s;
+    }
+    body.dark-mode {
+      background-color: #121212;
+      color: #e0e0e0;
     }
     h1 {
       text-align: center;
+    }
+    #modoToggle {
+      margin-bottom: 20px;
+      padding: 6px 12px;
+      cursor: pointer;
     }
     #filtros {
       display: flex;
@@ -21,12 +32,24 @@
     }
     select {
       padding: 6px;
+      border: 1px solid #ccc;
+      background: #fff;
+      color: #000;
+    }
+    body.dark-mode select {
+      background: #2c2c2c;
+      color: #e0e0e0;
+      border: 1px solid #555;
     }
     table {
       width: 100%;
       border-collapse: collapse;
       margin-top: 20px;
       background: white;
+    }
+    body.dark-mode table {
+      background-color: #1e1e1e;
+      color: #e0e0e0;
     }
     th, td {
       border: 1px solid #ddd;
@@ -35,6 +58,12 @@
     }
     th {
       background: #eee;
+    }
+    body.dark-mode th {
+      background-color: #2c2c2c;
+    }
+    body.dark-mode td {
+      border-color: #444;
     }
     tr.piscar-celula {
       animation: piscar 1s ease-in-out 2;
@@ -71,6 +100,7 @@
   </style>
 </head>
 <body>
+  <button id="modoToggle">🌙 Alternar Modo</button>
   <h1>Ocorrências PROCIV</h1>
 
   <div id="filtros">
@@ -104,6 +134,16 @@
     const url = "https://prociv-agserver.geomai.mai.gov.pt/arcgis/rest/services/Ocorrencias_Base/FeatureServer/0/query?f=geojson&where=1=1&outFields=*";
     let ocorrencias = [];
     let tabelaAnterior = {};
+
+    // Ativar modo noturno salvo
+    const modoSalvo = localStorage.getItem('modo');
+    if(modoSalvo === 'dark') document.body.classList.add('dark-mode');
+
+    document.getElementById('modoToggle').addEventListener('click', () => {
+      document.body.classList.toggle('dark-mode');
+      const modoAtual = document.body.classList.contains('dark-mode') ? 'dark' : 'light';
+      localStorage.setItem('modo', modoAtual);
+    });
 
     function capitalizar(str) {
       return str ? str.charAt(0).toUpperCase() + str.slice(1).toLowerCase() : '';
@@ -155,7 +195,6 @@
       criarCard('Aéreos', totalAereos, '#ffe5b4', '#000', '🚁');
       criarCard('Aquáticos', totalAquaticos, '#d4e4f8', '#000', '🚤');
 
-      // 🔥 Ocorrências Críticas
       const criticas = ocorrencias.filter(o => {
         const estadoOk = o.EstadoAgrupado === "Em Curso" || o.EstadoAgrupado === "Em Conclusão";
 
