--- a/index-tabela.html
+++ b/index-tabela.html
@@ -131,10 +131,10 @@
         <th>Localidade</th>
         <th>Natureza</th>
         <th>Estado</th>
-        <th>Operacionais</th>
-        <th>Terrestres</th>
-        <th>Aéreos</th>
-        <th>Aquáticos</th>
+        <th>OP</th>
+        <th>MT</th>
+        <th>MA</th>
+        <th>MAq</th>
       </tr>
     </thead>
     <tbody></tbody>
