--- a/index_2026.html
+++ b/index_2026.html
@@ -3,99 +3,175 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Ocorrências GeoJSON Dashboard</title>
+<title>Painel de Ocorrências</title>
 
-<link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+<link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
 
 <style>
 body {
     margin: 0;
-    font-family: Arial, sans-serif;
-    background: #0f172a;
-    color: white;
+    font-family: "Segoe UI", Arial, sans-serif;
+    background: #f4f6f9;
+    color: #1f2937;
 }
+
 header {
+    background: #1e3a8a;
+    color: white;
     padding: 20px;
     text-align: center;
-    font-size: 24px;
+    font-size: 22px;
+    font-weight: 600;
 }
+
 .container {
-    padding: 20px;
+    padding: 30px;
 }
+
+.section-title {
+    font-size: 18px;
+    margin-bottom: 15px;
+    font-weight: 600;
+    color: #1e3a8a;
+}
+
 .cards {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
     gap: 20px;
-    margin-bottom: 30px;
+    margin-bottom: 40px;
 }
+
 .card {
-    background: #1e293b;
+    background: white;
     padding: 20px;
-    border-radius: 12px;
-    text-align: center;
+    border-radius: 8px;
+    border-left: 6px solid #1e3a8a;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.05);
 }
-.card h2 {
+
+.card p {
     margin: 0;
-    font-size: 28px;
-    color: #38bdf8;
+    font-size: 14px;
+    color: #6b7280;
 }
+
+.card h2 {
+    margin: 8px 0 0 0;
+    font-size: 26px;
+    color: #111827;
+}
+
 table {
     width: 100%;
     border-collapse: collapse;
-    margin-bottom: 30px;
+    background: white;
+    margin-bottom: 40px;
 }
-th, td {
-    padding: 10px;
-    text-align: left;
-}
+
 th {
-    background: #1e293b;
+    background: #e5e7eb;
+    padding: 12px;
+    text-align: left;
+    font-size: 14px;
 }
-tr:nth-child(even) {
-    background: #1e293b;
+
+td {
+    padding: 10px;
+    border-bottom: 1px solid #e5e7eb;
+    font-size: 13px;
 }
+
+tr:hover {
+    background: #f9fafb;
+}
+
 #map {
-    height: 400px;
-    border-radius: 12px;
+    height: 450px;
+    border-radius: 8px;
+}
+
+footer {
+    text-align: center;
+    padding: 15px;
+    background: #1e3a8a;
+    color: white;
+    font-size: 12px;
 }
 </style>
 </head>
 <body>
 
-<header>📍 Ocorrências - Mapa e Dados</header>
+<header>
+    Painel Institucional de Ocorrências
+</header>
 
 <div class="container">
+
+    <div class="section-title">Indicadores Gerais</div>
+
     <div class="cards">
         <div class="card">
             <p>Total Ocorrências</p>
-            <h2 id="totalCount">0</h2>
+            <h2 id="totalOcorrencias">0</h2>
         </div>
+
         <div class="card">
-            <p>Latitude Média</p>
-            <h2 id="avgLat">0</h2>
+            <p>Total Operacionais</p>
+            <h2 id="totalOperacionais">0</h2>
         </div>
+
         <div class="card">
-            <p>Longitude Média</p>
-            <h2 id="avgLon">0</h2>
+            <p>Total Veículos</p>
+            <h2 id="totalVeiculos">0</h2>
+        </div>
+
+        <div class="card">
+            <p>Total Aéreos</p>
+            <h2 id="totalAereos">0</h2>
+        </div>
+
+        <div class="card">
+            <p>Total Aquáticos</p>
+            <h2 id="totalAquaticos">0</h2>
+        </div>
+
+        <div class="card">
+            <p>Total Incêndios</p>
+            <h2 id="totalIncendios">0</h2>
+        </div>
+
+        <div class="card">
+            <p>Significativas</p>
+            <h2 id="totalSignificativas">0</h2>
         </div>
     </div>
+
+    <div class="section-title">Lista de Ocorrências</div>
 
     <table>
         <thead>
             <tr>
                 <th>ID</th>
-                <th>Atributos (exemplo)</th>
-                <th>Longitude</th>
-                <th>Latitude</th>
+                <th>Tipo</th>
+                <th>Local</th>
+                <th>Data</th>
             </tr>
         </thead>
         <tbody id="tableBody"></tbody>
     </table>
 
+    <div class="section-title">Mapa de Ocorrências</div>
     <div id="map"></div>
+
 </div>
 
+<footer>
+    © 2026 Painel Oficial de Monitorização
+</footer>
+
 <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+
 <script>
 const map = L.map('map').setView([39.5, -8.0], 6);
 
@@ -104,55 +180,56 @@ L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
 }).addTo(map);
 
 async function fetchGeoData() {
-    const url =
-        "https://services-eu1.arcgis.com/VlrHb7fn5ewYhX6y/arcgis/rest/services/OcorrenciasSite/FeatureServer/0/query?" +
-        "where=0%3D0&outFields=*&f=geojson";
+    const url = "https://services-eu1.arcgis.com/VlrHb7fn5ewYhX6y/arcgis/rest/services/OcorrenciasSite/FeatureServer/0/query?where=0%3D0&outFields=*&f=geojson";
 
-    try {
-        const res = await fetch(url);
-        const data = await res.json();
+    const res = await fetch(url);
+    const data = await res.json();
+    const features = data.features || [];
 
-        const features = data.features || [];
+    document.getElementById('totalOcorrencias').innerText = features.length;
 
-        document.getElementById('totalCount').innerText = features.length;
+    let totalOperacionais = 0;
+    let totalVeiculos = 0;
+    let totalAereos = 0;
+    let totalAquaticos = 0;
+    let totalIncendios = 0;
+    let totalSignificativas = 0;
 
-        let sumLat = 0;
-        let sumLon = 0;
+    const table = document.getElementById('tableBody');
+    table.innerHTML = "";
 
-        const table = document.getElementById('tableBody');
-        table.innerHTML = "";
+    features.forEach((f, i) => {
+        const p = f.properties;
+        const coords = f.geometry.coordinates;
 
-        features.forEach((f, i) => {
-            const coords = f.geometry.coordinates;
-            const lon = coords[0];
-            const lat = coords[1];
+        totalOperacionais += Number(p.operacionais || 0);
+        totalVeiculos += Number(p.veiculos || 0);
+        totalAereos += Number(p.aereos || 0);
+        totalAquaticos += Number(p.aquaticos || 0);
 
-            sumLat += lat;
-            sumLon += lon;
+        if (p.tipo && p.tipo.toLowerCase().includes("incêndio")) totalIncendios++;
+        if (p.significativa === 1 || p.significativa === "Sim") totalSignificativas++;
 
-            // Table linha
-            table.innerHTML += `
-                <tr>
-                    <td>${i+1}</td>
-                    <td>${JSON.stringify(f.properties)}</td>
-                    <td>${lon.toFixed(4)}</td>
-                    <td>${lat.toFixed(4)}</td>
-                </tr>
-            `;
+        table.innerHTML += `
+            <tr>
+                <td>${i+1}</td>
+                <td>${p.tipo || "-"}</td>
+                <td>${p.local || "-"}</td>
+                <td>${p.data || "-"}</td>
+            </tr>
+        `;
 
-            // Map marker
-            L.marker([lat, lon])
-                .addTo(map)
-                .bindPopup("ID: " + (i+1));
-        });
-
-        if (features.length > 0) {
-            document.getElementById('avgLat').innerText = (sumLat / features.length).toFixed(4);
-            document.getElementById('avgLon').innerText = (sumLon / features.length).toFixed(4);
+        if (coords) {
+            L.marker([coords[1], coords[0]]).addTo(map);
         }
-    } catch (err) {
-        console.error("Erro ao carregar dados:", err);
-    }
+    });
+
+    document.getElementById('totalOperacionais').innerText = totalOperacionais;
+    document.getElementById('totalVeiculos').innerText = totalVeiculos;
+    document.getElementById('totalAereos').innerText = totalAereos;
+    document.getElementById('totalAquaticos').innerText = totalAquaticos;
+    document.getElementById('totalIncendios').innerText = totalIncendios;
+    document.getElementById('totalSignificativas').innerText = totalSignificativas;
 }
 
 fetchGeoData();
