--- a/index_2026.html
+++ b/index_2026.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Painel de Ocorrências</title>
+<title>Painel Institucional de Ocorrências</title>
 
 <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
 
@@ -15,15 +15,46 @@ body {
     color: #1f2937;
 }
 
-header {
+/* ===== TOPBAR ===== */
+.topbar {
     background: #1e3a8a;
     color: white;
-    padding: 20px;
-    text-align: center;
-    font-size: 22px;
-    font-weight: 600;
+    padding: 15px 30px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
+.title {
+    font-size: 20px;
+    font-weight: 600;
+    text-align: center;
+    flex: 1;
+}
+
+.status {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    font-size: 14px;
+}
+
+.dot {
+    width: 10px;
+    height: 10px;
+    background: #22c55e;
+    border-radius: 50%;
+    box-shadow: 0 0 8px #22c55e;
+    animation: pulse 1.5s infinite;
+}
+
+@keyframes pulse {
+    0% { opacity: 1; }
+    50% { opacity: 0.4; }
+    100% { opacity: 1; }
+}
+
+/* ===== CONTENT ===== */
 .container {
     padding: 30px;
 }
@@ -62,6 +93,7 @@ header {
     color: #111827;
 }
 
+/* ===== TABLE ===== */
 table {
     width: 100%;
     border-collapse: collapse;
@@ -86,11 +118,13 @@ tr:hover {
     background: #f9fafb;
 }
 
+/* ===== MAP ===== */
 #map {
     height: 450px;
     border-radius: 8px;
 }
 
+/* ===== FOOTER ===== */
 footer {
     text-align: center;
     padding: 15px;
@@ -100,10 +134,18 @@ footer {
 }
 </style>
 </head>
+
 <body>
 
-<header>
-    Painel Institucional de Ocorrências
+<header class="topbar">
+    <div class="status">
+        <span class="dot"></span>
+        <span id="datetime"></span>
+    </div>
+
+    <div class="title">
+        Painel Institucional de Ocorrências
+    </div>
 </header>
 
 <div class="container">
@@ -111,40 +153,13 @@ footer {
     <div class="section-title">Indicadores Gerais</div>
 
     <div class="cards">
-        <div class="card">
-            <p>Total Ocorrências</p>
-            <h2 id="totalOcorrencias">0</h2>
-        </div>
-
-        <div class="card">
-            <p>Total Operacionais</p>
-            <h2 id="totalOperacionais">0</h2>
-        </div>
-
-        <div class="card">
-            <p>Total Veículos</p>
-            <h2 id="totalVeiculos">0</h2>
-        </div>
-
-        <div class="card">
-            <p>Total Aéreos</p>
-            <h2 id="totalAereos">0</h2>
-        </div>
-
-        <div class="card">
-            <p>Total Aquáticos</p>
-            <h2 id="totalAquaticos">0</h2>
-        </div>
-
-        <div class="card">
-            <p>Total Incêndios</p>
-            <h2 id="totalIncendios">0</h2>
-        </div>
-
-        <div class="card">
-            <p>Significativas</p>
-            <h2 id="totalSignificativas">0</h2>
-        </div>
+        <div class="card"><p>Total Ocorrências</p><h2 id="totalOcorrencias">0</h2></div>
+        <div class="card"><p>Total Operacionais</p><h2 id="totalOperacionais">0</h2></div>
+        <div class="card"><p>Total Veículos</p><h2 id="totalVeiculos">0</h2></div>
+        <div class="card"><p>Total Aéreos</p><h2 id="totalAereos">0</h2></div>
+        <div class="card"><p>Total Aquáticos</p><h2 id="totalAquaticos">0</h2></div>
+        <div class="card"><p>Total Incêndios</p><h2 id="totalIncendios">0</h2></div>
+        <div class="card"><p>Significativas</p><h2 id="totalSignificativas">0</h2></div>
     </div>
 
     <div class="section-title">Lista de Ocorrências</div>
@@ -173,63 +188,85 @@ footer {
 <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 
 <script>
+/* ===== DATA & HORA ===== */
+function updateDateTime() {
+    const now = new Date();
+
+    const date = now.toLocaleDateString('pt-PT');
+    const time = now.toLocaleTimeString('pt-PT');
+
+    document.getElementById('datetime').innerText =
+        `${date} ${time} | Sistema Online`;
+}
+
+setInterval(updateDateTime, 1000);
+updateDateTime();
+
+/* ===== MAPA ===== */
 const map = L.map('map').setView([39.5, -8.0], 6);
 
 L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
     attribution: '&copy; OpenStreetMap contributors'
 }).addTo(map);
 
+/* ===== FETCH DADOS ===== */
 async function fetchGeoData() {
+
     const url = "https://services-eu1.arcgis.com/VlrHb7fn5ewYhX6y/arcgis/rest/services/OcorrenciasSite/FeatureServer/0/query?where=0%3D0&outFields=*&f=geojson";
 
-    const res = await fetch(url);
-    const data = await res.json();
-    const features = data.features || [];
+    try {
+        const res = await fetch(url);
+        const data = await res.json();
+        const features = data.features || [];
 
-    document.getElementById('totalOcorrencias').innerText = features.length;
+        document.getElementById('totalOcorrencias').innerText = features.length;
 
-    let totalOperacionais = 0;
-    let totalVeiculos = 0;
-    let totalAereos = 0;
-    let totalAquaticos = 0;
-    let totalIncendios = 0;
-    let totalSignificativas = 0;
+        let totalOperacionais = 0;
+        let totalVeiculos = 0;
+        let totalAereos = 0;
+        let totalAquaticos = 0;
+        let totalIncendios = 0;
+        let totalSignificativas = 0;
 
-    const table = document.getElementById('tableBody');
-    table.innerHTML = "";
+        const table = document.getElementById('tableBody');
+        table.innerHTML = "";
 
-    features.forEach((f, i) => {
-        const p = f.properties;
-        const coords = f.geometry.coordinates;
+        features.forEach((f, i) => {
+            const p = f.properties || {};
+            const coords = f.geometry?.coordinates;
 
-        totalOperacionais += Number(p.operacionais || 0);
-        totalVeiculos += Number(p.veiculos || 0);
-        totalAereos += Number(p.aereos || 0);
-        totalAquaticos += Number(p.aquaticos || 0);
+            totalOperacionais += Number(p.operacionais || 0);
+            totalVeiculos += Number(p.veiculos || 0);
+            totalAereos += Number(p.aereos || 0);
+            totalAquaticos += Number(p.aquaticos || 0);
 
-        if (p.tipo && p.tipo.toLowerCase().includes("incêndio")) totalIncendios++;
-        if (p.significativa === 1 || p.significativa === "Sim") totalSignificativas++;
+            if (p.tipo && p.tipo.toLowerCase().includes("incêndio")) totalIncendios++;
+            if (p.significativa === 1 || p.significativa === "Sim") totalSignificativas++;
 
-        table.innerHTML += `
-            <tr>
-                <td>${i+1}</td>
-                <td>${p.tipo || "-"}</td>
-                <td>${p.local || "-"}</td>
-                <td>${p.data || "-"}</td>
-            </tr>
-        `;
+            table.innerHTML += `
+                <tr>
+                    <td>${i+1}</td>
+                    <td>${p.tipo || "-"}</td>
+                    <td>${p.local || "-"}</td>
+                    <td>${p.data || "-"}</td>
+                </tr>
+            `;
 
-        if (coords) {
-            L.marker([coords[1], coords[0]]).addTo(map);
-        }
-    });
+            if (coords) {
+                L.marker([coords[1], coords[0]]).addTo(map);
+            }
+        });
 
-    document.getElementById('totalOperacionais').innerText = totalOperacionais;
-    document.getElementById('totalVeiculos').innerText = totalVeiculos;
-    document.getElementById('totalAereos').innerText = totalAereos;
-    document.getElementById('totalAquaticos').innerText = totalAquaticos;
-    document.getElementById('totalIncendios').innerText = totalIncendios;
-    document.getElementById('totalSignificativas').innerText = totalSignificativas;
+        document.getElementById('totalOperacionais').innerText = totalOperacionais;
+        document.getElementById('totalVeiculos').innerText = totalVeiculos;
+        document.getElementById('totalAereos').innerText = totalAereos;
+        document.getElementById('totalAquaticos').innerText = totalAquaticos;
+        document.getElementById('totalIncendios').innerText = totalIncendios;
+        document.getElementById('totalSignificativas').innerText = totalSignificativas;
+
+    } catch (error) {
+        console.error("Erro ao carregar dados:", error);
+    }
 }
 
 fetchGeoData();
