Add general indicators and update fetch logic

--- a/index_2026.html
+++ b/index_2026.html
@@ -158,6 +158,7 @@ footer {
 </header>
 
 <div class="container">
+
     <div class="section-title">Indicadores Gerais</div>
 
     <div class="cards">
@@ -186,6 +187,7 @@ footer {
 
     <div class="section-title">Mapa de Ocorrências</div>
     <div id="map"></div>
+
 </div>
 
 <footer>
@@ -232,7 +234,6 @@ async function fetchGeoData() {
 
     try {
         const res = await fetch(url);
-
         if (!res.ok) throw new Error("Erro HTTP");
 
         const data = await res.json();
@@ -240,7 +241,45 @@ async function fetchGeoData() {
 
         setStatusOnline();
 
+        let totalAereos = 0;
+        let totalOperacionais = 0;
+        let totalVeiculos = 0;
+        let totalIncendios = 0;
+
+        const table = document.getElementById('tableBody');
+        table.innerHTML = "";
+
+        features.forEach((f, i) => {
+            const p = f.properties || {};
+            const coords = f.geometry?.coordinates;
+
+            totalAereos += Number(p.MeiosAereos || 0);
+            totalOperacionais += Number(p.Operacionais || 0);
+            totalVeiculos += Number(p.MeiosTerrestres || 0);
+
+            if (p.Tipo && p.Tipo.toLowerCase().includes("incêndio")) {
+                totalIncendios++;
+            }
+
+            table.innerHTML += `
+                <tr>
+                    <td>${i+1}</td>
+                    <td>${p.Tipo || "-"}</td>
+                    <td>${p.Local || "-"}</td>
+                    <td>${p.Data || "-"}</td>
+                </tr>
+            `;
+
+            if (coords) {
+                L.marker([coords[1], coords[0]]).addTo(map);
+            }
+        });
+
         document.getElementById('totalOcorrencias').innerText = features.length;
+        document.getElementById('totalAereos').innerText = totalAereos;
+        document.getElementById('totalOperacionais').innerText = totalOperacionais;
+        document.getElementById('totalVeiculos').innerText = totalVeiculos;
+        document.getElementById('totalIncendios').innerText = totalIncendios;
 
     } catch (error) {
         console.error("Erro na API:", error);
@@ -249,7 +288,7 @@ async function fetchGeoData() {
 }
 
 fetchGeoData();
-setInterval(fetchGeoData, 60000); // atualiza a cada 60 segundos
+setInterval(fetchGeoData, 60000);
 </script>
 
 </body>
